cmake_minimum_required(VERSION 3.4.1)
project(stunserver)
set(CMAKE_CXX_STANDARD 14)
add_definitions(-DDEBUG)
include_directories(common stuncore networkutils resources)

SET (BOOST_MIN_VERSION "1.55.0")
find_package(
  Boost
  ${BOOST_MIN_VERSION}
  COMPONENTS coroutine filesystem system
  REQUIRED)
if(Boost_FOUND)
  message(STATUS "Found Boost: " ${Boost_LIBRARIES})
  include_directories(${Boost_INCLUDE_DIRS})
  link_libraries(${Boost_LIBRARIES})
endif()
find_package(OpenSSL REQUIRED)
if(OPENSSL_FOUND)
  include_directories(${OPENSSL_INCLUDE_DIR})
  link_libraries(${OPENSSL_LIBRARIES})
  message(STATUS "Found Openssl: " ${OPENSSL_LIBRARIES})
endif()
find_package(Threads)
link_libraries(${CMAKE_THREAD_LIBS_INIT})
add_subdirectory(common)
add_subdirectory(stuncore)
add_subdirectory(networkutils)
add_subdirectory(testcode)
add_subdirectory(client)
add_subdirectory(server)
